--- a/public/pages.html
+++ b/public/pages.html
@@ -15,4 +15,10 @@
   <li>
     <a href="examples.html">Работы</a>
   </li>
+  <li>
+    <a href="implantation.html">Имплантация зубов</a>
+  </li>
+  <li>
+    <a href="wisdomTeeth.html">Удаление зубов мудрости</a>
+  </li>
 </ul>
