--- a/public/implantation.html
+++ b/public/implantation.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -302,7 +302,7 @@
     <!-- main screen start -->
     <main class="main">
         <section class="service-banner">
-            <img src="./images/implantation-bg.jpg" alt="implantation">
+            <img src="./images/implantation-bg.jpg" alt="implantation" loading="lazy">
             <div class="container">
                 <div class="service-banner-content">
                     <div class="title">
@@ -567,7 +567,7 @@
                                 </div>
                                 <div class="right">
                                     <div class="image">
-                                        <img src="./images/interwiev-photo-1.jpg" alt="doctor">
+                                        <img src="./images/interwiev-photo-1.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="quote">
                                         «Я рад, что удалось уберечь пациента от дорогостоящей операции по наращиванию костной ткани»
@@ -795,25 +795,25 @@
                 <div class="implants-slider slider-four">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-1.jpg" alt="implant">
+                            <img src="./images/implant-1.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-2.jpg" alt="implant">
+                            <img src="./images/implant-2.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-3.jpg" alt="implant">
+                            <img src="./images/implant-3.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-4.jpg" alt="implant">
+                            <img src="./images/implant-4.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-5.jpg" alt="implant">
+                            <img src="./images/implant-5.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-6.jpg" alt="implant">
+                            <img src="./images/implant-6.jpg" alt="implant" loading="lazy">
                         </div>
                         <div class="swiper-slide implants-slider-item">
-                            <img src="./images/implant-7.jpg" alt="implant">
+                            <img src="./images/implant-7.jpg" alt="implant" loading="lazy">
                         </div>
                     </div>
                     <div class="slider-arrows">
@@ -1021,10 +1021,10 @@
                             <div class="example flex">
                                 <div class="example-images">
                                     <div class="before">                  
-                                        <img src="./images/before.jpg" alt="before">
+                                        <img src="./images/before.jpg" alt="before" loading="lazy">
                                     </div>
                                     <div class="after">                 
-                                        <img src="./images/after.jpg" alt="after">
+                                        <img src="./images/after.jpg" alt="after" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="example-text">
@@ -1049,10 +1049,10 @@
                           <div class="example flex">
                               <div class="example-images">
                                   <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before">
+                                      <img src="./images/before.jpg" alt="before" loading="lazy">
                                   </div>
                                   <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after">
+                                      <img src="./images/after.jpg" alt="after" loading="lazy">
                                   </div>
                               </div>
                               <div class="example-text">
@@ -1172,7 +1172,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
