--- a/public/about.html
+++ b/public/about.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -302,7 +302,7 @@
     <!-- main screen start -->
     <main class="main">
       <section class="about">
-        <img src="./images/about-bg.jpg" alt="slider" class="about-bg">
+        <img src="./images/about-bg.jpg" alt="slider" class="about-bg" loading="lazy">
         <div class="container">
             <div class="about-content">               
                 <div class="about-title">
@@ -667,7 +667,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/doctor-1.jpg" alt="doctor">
+                                        <img src="./images/doctor-1.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">
@@ -698,7 +698,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/doctor-2.jpg" alt="doctor">
+                                        <img src="./images/doctor-2.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -729,7 +729,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-3.jpg" alt="doctor">
+                                    <img src="./images/doctor-3.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                   
@@ -760,7 +760,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-4.jpg" alt="doctor">
+                                    <img src="./images/doctor-4.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -793,7 +793,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-5.jpg" alt="doctor">
+                                    <img src="./images/doctor-5.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -824,7 +824,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-6.jpg" alt="doctor">
+                                    <img src="./images/doctor-6.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -855,7 +855,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-7.jpg" alt="doctor">
+                                    <img src="./images/doctor-7.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -886,7 +886,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                    <img src="./images/doctor-8.jpg" alt="doctor">
+                                    <img src="./images/doctor-8.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                     <div class="doctor-name h4">                    
@@ -932,7 +932,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/assistant-1.jpg" alt="doctor">
+                                        <img src="./images/assistant-1.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -953,7 +953,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/assistant-2.jpg" alt="doctor">
+                                        <img src="./images/assistant-2.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -974,7 +974,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/assistant-3.jpg" alt="doctor">
+                                        <img src="./images/assistant-3.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -995,7 +995,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/assistant-4.jpg" alt="doctor">
+                                        <img src="./images/assistant-4.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1022,7 +1022,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/admin-1.jpg" alt="doctor">
+                                        <img src="./images/admin-1.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1043,7 +1043,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/admin-2.jpg" alt="doctor">
+                                        <img src="./images/admin-2.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1064,7 +1064,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/admin-3.jpg" alt="doctor">
+                                        <img src="./images/admin-3.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1085,7 +1085,7 @@
                             <div class="col-lg-3">
                                 <div class="swiper-slide doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/admin-4.jpg" alt="doctor">
+                                        <img src="./images/admin-4.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1107,7 +1107,7 @@
                             <div class="col-lg-3">
                                 <div class="doctor">
                                     <div class="doctor-photo">
-                                        <img src="./images/admin-5.jpg" alt="doctor">
+                                        <img src="./images/admin-5.jpg" alt="doctor" loading="lazy">
                                     </div>
                                     <div class="doctor-info">
                                         <div class="doctor-name h4">
@@ -1414,7 +1414,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
