--- a/src/doctors.html
+++ b/src/doctors.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -313,7 +313,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                    <img src="./images/doctor-1.jpg" alt="doctor">
+                                  <img src="./images/doctor-1.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">
@@ -344,7 +344,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                    <img src="./images/doctor-2.jpg" alt="doctor">
+                                  <img src="./images/doctor-2.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -375,7 +375,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-3.jpg" alt="doctor">
+                                  <img src="./images/doctor-3.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                   
@@ -406,7 +406,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-4.jpg" alt="doctor">
+                                  <img src="./images/doctor-4.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -439,7 +439,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-5.jpg" alt="doctor">
+                                  <img src="./images/doctor-5.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -470,7 +470,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-6.jpg" alt="doctor">
+                                  <img src="./images/doctor-6.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -501,7 +501,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-7.jpg" alt="doctor">
+                                  <img src="./images/doctor-7.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -532,7 +532,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-8.jpg" alt="doctor">
+                                  <img src="./images/doctor-8.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -564,7 +564,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-9.jpg" alt="doctor">
+                                  <img src="./images/doctor-9.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -595,7 +595,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-10.jpg" alt="doctor">
+                                  <img src="./images/doctor-10.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -626,7 +626,7 @@
                         <div class="col-lg-3">
                             <div class="swiper-slide doctor">
                                 <div class="doctor-photo">
-                                <img src="./images/doctor-11.jpg" alt="doctor">
+                                  <img src="./images/doctor-11.jpg" alt="doctor" loading="lazy">
                                 </div>
                                 <div class="doctor-info">
                                 <div class="doctor-name h4">                    
@@ -939,7 +939,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
