--- a/src/examples.html
+++ b/src/examples.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -314,10 +314,10 @@
                             <div class="example">
                                 <div class="example-images">
                                     <div class="before">                  
-                                        <img src="./images/before.jpg" alt="before">
+                                        <img src="./images/before.jpg" alt="before" loading="lazy">
                                     </div>
                                     <div class="after">                 
-                                        <img src="./images/after.jpg" alt="after">
+                                        <img src="./images/after.jpg" alt="after" loading="lazy">
                                     </div>
                                 </div>
                                 <div class="example-text">
@@ -348,10 +348,10 @@
                           <div class="example">
                               <div class="example-images">
                                   <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before">
+                                      <img src="./images/before.jpg" alt="before" loading="lazy">
                                   </div>
                                   <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after">
+                                      <img src="./images/after.jpg" alt="after" loading="lazy">
                                   </div>
                               </div>
                               <div class="example-text">
@@ -383,10 +383,10 @@
                           <div class="example">
                               <div class="example-images">
                                   <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before">
+                                      <img src="./images/before.jpg" alt="before" loading="lazy">
                                   </div>
                                   <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after">
+                                      <img src="./images/after.jpg" alt="after" loading="lazy">
                                   </div>
                               </div>
                               <div class="example-text">
@@ -417,10 +417,10 @@
                           <div class="example">
                               <div class="example-images">
                                   <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before">
+                                      <img src="./images/before.jpg" alt="before" loading="lazy">
                                   </div>
                                   <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after">
+                                      <img src="./images/after.jpg" alt="after" loading="lazy">
                                   </div>
                               </div>
                               <div class="example-text">
@@ -455,10 +455,10 @@
                           <div class="example">
                               <div class="example-images">
                                   <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before">
+                                      <img src="./images/before.jpg" alt="before" loading="lazy">
                                   </div>
                                   <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after">
+                                      <img src="./images/after.jpg" alt="after" loading="lazy">
                                   </div>
                               </div>
                               <div class="example-text">
@@ -489,10 +489,10 @@
                         <div class="example">
                             <div class="example-images">
                                 <div class="before">                  
-                                    <img src="./images/before.jpg" alt="before">
+                                    <img src="./images/before.jpg" alt="before" loading="lazy">
                                 </div>
                                 <div class="after">                 
-                                    <img src="./images/after.jpg" alt="after">
+                                    <img src="./images/after.jpg" alt="after" loading="lazy">
                                 </div>
                             </div>
                             <div class="example-text">
@@ -524,10 +524,10 @@
                         <div class="example">
                             <div class="example-images">
                                 <div class="before">                  
-                                    <img src="./images/before.jpg" alt="before">
+                                    <img src="./images/before.jpg" alt="before" loading="lazy">
                                 </div>
                                 <div class="after">                 
-                                    <img src="./images/after.jpg" alt="after">
+                                    <img src="./images/after.jpg" alt="after" loading="lazy">
                                 </div>
                             </div>
                             <div class="example-text">
@@ -558,10 +558,10 @@
                         <div class="example">
                             <div class="example-images">
                                 <div class="before">                  
-                                    <img src="./images/before.jpg" alt="before">
+                                    <img src="./images/before.jpg" alt="before" loading="lazy">
                                 </div>
                                 <div class="after">                 
-                                    <img src="./images/after.jpg" alt="after">
+                                    <img src="./images/after.jpg" alt="after" loading="lazy">
                                 </div>
                             </div>
                             <div class="example-text">
@@ -875,7 +875,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
