--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -314,7 +314,7 @@
                     </div>
                     <div class="slider-descroption">
                       <p>
-                        Лечим качественно, используя новейшее оборудование и материалы
+                        Лечим качественно, используя новейшее<br> оборудование и материалы
                       </p>
                       <p>
                         Беремся за самые сложные случаи
@@ -501,7 +501,7 @@
             <div class="col-lg-6">
               <div class="actions-item">
                 <div class="image">
-                  <img src="./images/action-1.jpg" alt="present">
+                  <img src="./images/action-1.jpg" alt="present" loading="lazy">
                 </div>
                 <div class="info">                  
                   <p class="info-title">
@@ -523,7 +523,7 @@
             <div class="col-lg-6">
               <div class="actions-item">
                 <div class="image">
-                  <img src="./images/action-2.jpg" alt="present">
+                  <img src="./images/action-2.jpg" alt="present" loading="lazy">
                 </div>
                 <div class="info">                  
                   <p class="info-title">
@@ -847,7 +847,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-1.jpg" alt="doctor">
+                  <img src="./images/doctor-1.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">
@@ -876,7 +876,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-2.jpg" alt="doctor">
+                  <img src="./images/doctor-2.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -905,7 +905,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-3.jpg" alt="doctor">
+                  <img src="./images/doctor-3.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                   
@@ -934,7 +934,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-4.jpg" alt="doctor">
+                  <img src="./images/doctor-4.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -963,7 +963,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-5.jpg" alt="doctor">
+                  <img src="./images/doctor-5.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -992,7 +992,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-6.jpg" alt="doctor">
+                  <img src="./images/doctor-6.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1021,7 +1021,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-7.jpg" alt="doctor">
+                  <img src="./images/doctor-7.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1050,7 +1050,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-8.jpg" alt="doctor">
+                  <img src="./images/doctor-8.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1079,7 +1079,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-9.jpg" alt="doctor">
+                  <img src="./images/doctor-9.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1108,7 +1108,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-10.jpg" alt="doctor">
+                  <img src="./images/doctor-10.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1137,7 +1137,7 @@
 
               <div class="swiper-slide doctor">
                 <div class="doctor-photo">
-                  <img src="./images/doctor-11.jpg" alt="doctor">
+                  <img src="./images/doctor-11.jpg" alt="doctor" loading="lazy">
                 </div>
                 <div class="doctor-info">
                   <div class="doctor-name h4">                    
@@ -1201,55 +1201,55 @@
 
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
               
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
 
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
 
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
 
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
 
               <div class="swiper-slide work-slide">
                 <div class="before">                  
-                  <img src="./images/before.jpg" alt="before">
+                  <img src="./images/before.jpg" alt="before" loading="lazy">
                 </div>
                 <div class="after">                 
-                  <img src="./images/after.jpg" alt="after">
+                  <img src="./images/after.jpg" alt="after" loading="lazy">
                 </div>
               </div>
 
@@ -1359,7 +1359,7 @@
                   <div class="reviews-head-name" title="Татьяна Тихончук">
                     Татьяна Тихончук
                   </div>
-                  <div class="reviews-head-rating three">
+                  <div class="reviews-head-rating four">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                       <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -1579,7 +1579,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
