--- a/src/prices.html
+++ b/src/prices.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -561,7 +561,7 @@
                       <div class="actions-slider slider-four">
                         <div class="swiper-wrapper">
                           <div class="swiper-slide actions-wrapper">
-                            <img src="./images/action-card-1.jpg" alt="action">
+                              <img src="./images/action-card-1.jpg" alt="action" loading="lazy">
                             <div class="actions-content">
                               <div class="title">
                                 Мы стремимся не только приноситьвам пользу, но и радовать.
@@ -579,7 +579,7 @@
                             </div>                            
                           </div>
                           <div class="swiper-slide actions-wrapper">
-                            <img src="./images/action-card-1.jpg" alt="action">
+                            <img src="./images/action-card-1.jpg" alt="action" loading="lazy">
                           </div>
                         </div>
                         <div class="slider-arrows">
@@ -670,7 +670,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="installment-item">
-                  <img src="./images/card-1.jpg" alt="cartafun">
+                    <img src="./images/card-1.jpg" alt="cartafun" loading="lazy">
                   <div class="card">
                     Карта FUN
                   </div>
@@ -687,7 +687,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="installment-item">
-                  <img src="./images/card-2.jpg" alt="cartafun">
+                    <img src="./images/card-2.jpg" alt="shopping-card" loading="lazy">
                   <div class="card">
                     Карта покупок
                   </div>
@@ -701,7 +701,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="installment-item">
-                  <img src="./images/card-3.jpg" alt="cartafun">
+                    <img src="./images/card-3.jpg" alt="turtle-card" loading="lazy">
                   <div class="card">
                     Карта «Черепаха»
                   </div>
@@ -784,7 +784,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
