--- a/src/wisdomTeeth.html
+++ b/src/wisdomTeeth.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="header-top-wrapper">
             <a href="#" class="header-top-logo">
-              <img src="./images/logo.png" alt="logo">
+              <img src="./images/logo.png" alt="logo" loading="lazy">
             </a>
             <div class="header-top-contact">
               <div class="address">
@@ -302,7 +302,7 @@
     <!-- main screen start -->
     <main class="main">
         <section class="service-banner">
-            <img src="./images/implantation-bg.jpg" alt="implantation">
+            <img src="./images/implantation-bg.jpg" alt="implantation" loading="lazy">
             <div class="container">
                 <div class="service-banner-content">
                     <div class="title">
@@ -481,7 +481,7 @@
                             </div>     
                         </div>
                         <div class="service-content-image">
-                            <img src="./images/wisdom-teeth.jpg" alt="withdom-teeth"> 
+                            <img src="./images/wisdom-teeth.jpg" alt="withdom-teeth" loading="lazy"> 
                         </div>
                         <div class="service-content-item">
                             <div class="service-content-title"> 
@@ -537,7 +537,7 @@
                                     <div class="col-lg-12">
                                         <div class="swiper-slide doctor flex single">
                                             <div class="doctor-photo">
-                                                <img src="./images/doctor-1-big.jpg" alt="doctor">
+                                                <img src="./images/doctor-1-big.jpg" alt="doctor" loading="lazy">
                                             </div>
                                             <div class="doctor-info">
                                             <div class="doctor-name h4">
@@ -569,7 +569,7 @@
                                     <div class="col-lg-12">
                                         <div class="swiper-slide doctor flex single">
                                             <div class="doctor-photo">
-                                                <img src="./images/doctor-2-big.jpg" alt="doctor">
+                                                <img src="./images/doctor-2-big.jpg" alt="doctor" loading="lazy">
                                             </div>
                                             <div class="doctor-info">
                                                 <div class="doctor-name h4">                    
@@ -617,10 +617,10 @@
                                             <div class="example flex">
                                                 <div class="example-images">
                                                     <div class="before">                  
-                                                        <img src="./images/before.jpg" alt="before">
+                                                        <img src="./images/before.jpg" alt="before" loading="lazy">
                                                     </div>
                                                     <div class="after">                 
-                                                        <img src="./images/after.jpg" alt="after">
+                                                        <img src="./images/after.jpg" alt="after" loading="lazy">
                                                     </div>
                                                 </div>
                                                 <div class="example-text">
@@ -769,7 +769,7 @@
           </div>
           <div class="col-lg-4">
             <div class="footer-main">
-              <img src="./images/logo.png" alt="logo" class="logo">
+              <img src="./images/logo.png" alt="logo" class="logo" loading="lazy">
               <button class="ui-btn">Записаться</button>
               <div class="socials">
                 <a href="#">
