--- a/src/about.html
+++ b/src/about.html
@@ -331,17 +331,17 @@
             <div class="container">
               <ul>
                 <li>
-                  <a href="#" class="tab">
+                  <a href="javascript:void(0)" class="tab">
                     Оборудование
                 </a>
                 </li>
                 <li>
-                  <a href="#" class="tab">
+                  <a href="javascript:void(0)" class="tab">
                     Гарантии
                 </a>
                 </li>
                 <li>
-                  <a href="#" class="tab active">
+                  <a href="javascript:void(0)" class="tab active">
                     Вакансии
                 </a>
                 </li>
